--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
           "main": "index.js",
             "dependencies": {
                 "node-telegram-bot-api": "^0.61.0",
-                    "fs-extra": "^11.1.1"
-                      }
-                      }
+                    "fs-extra": "^11.1.1",
+                        "yt-search": "^2.10.1",
+                            "ytdl-core": "^4.11.0"
+                              }
+                              }
+}
